<resources>
    <string name="app_name">Agric4Good</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_up">Create a new account</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="phone_number">Phone Number</string>
    <string name="farm_address">Farm Address</string>
    <string name="nin">NIN</string>
    <string name="country">Country</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>