<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_cus"
            android:icon="@drawable/ic_menu_camera"
            android:title="Customer" />
        <item
            android:id="@+id/nav_m"
            android:icon="@drawable/ic_menu_gallery"
            android:title="MarketPlace" />
        <item
            android:id="@+id/nav_f"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Forum" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_menu_camera"
            android:title="Chat" />
        <item
            android:id="@+id/nav_a"
            android:icon="@drawable/ic_menu_gallery"
            android:title="About" />
        <item
            android:id="@+id/nav_r"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Report" />
    </group>
</menu>