<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".SignUpBuyer">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="148dp"
        android:layout_height="59dp"
        android:fontFamily="sans-serif-black"
        android:text="Sign Up To Get Started"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.205"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView6" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="410dp"
        android:layout_height="661dp"
        android:layout_marginTop="70dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_rectangle" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="0dp">


        <EditText
            android:id="@+id/edlname"
            android:layout_width="162dp"
            android:layout_height="41dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="3dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintStart_toEndOf="@+id/edfname"
            app:layout_constraintTop_toBottomOf="@+id/lname" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:text="@string/email"
            android:textColor="@color/text_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edfname" />

        <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:text="@string/password"
            android:textColor="@color/text_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />

        <TextView
            android:id="@+id/nin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:text="@string/nin"
            android:textColor="@color/text_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edfaddress" />

        <TextView
            android:id="@+id/fname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/first_name"
            android:textColor="@color/text_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/lname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_name"
            android:textColor="@color/text_color"
            app:layout_constraintStart_toStartOf="@+id/edlname"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/country"
            android:textColor="@color/text_color"
            app:layout_constraintStart_toStartOf="@+id/edCountry"
            app:layout_constraintTop_toBottomOf="@+id/edNin" />

        <TextView
            android:id="@+id/textView11tate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/state"
            android:textColor="@color/text_color"
            app:layout_constraintStart_toStartOf="@+id/edState"
            app:layout_constraintTop_toBottomOf="@+id/edNin" />

        <TextView
            android:id="@+id/city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:text="@string/city"
            android:textColor="@color/text_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edNin" />

        <TextView
            android:id="@+id/baddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:text="Business Location"
            android:textColor="@color/text_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edpassword" />

        <TextView
            android:id="@+id/pnumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:text="@string/phone_number"
            android:textColor="@color/text_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edemail" />

        <EditText
            android:id="@+id/edfname"
            android:layout_width="162dp"
            android:layout_height="41dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="1dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fname" />

        <EditText
            android:id="@+id/edemail"
            android:layout_width="wrap_content"
            android:layout_height="41dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="1dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="wrap_content"
            android:layout_height="41dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="1dp"
            android:ems="10"
            android:inputType="phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pnumber" />

        <EditText
            android:id="@+id/edpassword"
            android:layout_width="wrap_content"
            android:layout_height="41dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="1dp"
            android:ems="10"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <EditText
            android:id="@+id/edfaddress"
            android:layout_width="wrap_content"
            android:layout_height="41dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="1dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/baddress" />

        <EditText
            android:id="@+id/edCity"
            android:layout_width="122dp"
            android:layout_height="31dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="1dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/city" />

        <EditText
            android:id="@+id/edNin"
            android:layout_width="wrap_content"
            android:layout_height="41dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="1dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nin" />

        <EditText
            android:id="@+id/edCountry"
            android:layout_width="132dp"
            android:layout_height="31dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="1dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintStart_toEndOf="@+id/edState"
            app:layout_constraintTop_toBottomOf="@+id/country" />

        <EditText
            android:id="@+id/edState"
            android:layout_width="132dp"
            android:layout_height="31dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="1dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintStart_toEndOf="@+id/edCity"
            app:layout_constraintTop_toBottomOf="@+id/textView11tate" />

        <Button
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/curved"
            android:text="Sign Up"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edState"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="Already have an account? Log in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>